{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 34,
  "lineage": "1ab40af9-e5c9-18f9-6b74-90bbd3d5a804",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:020982261240:loadbalancer/app/app-alb/fee4a29d3e44e789",
            "arn_suffix": "app/app-alb/fee4a29d3e44e789",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-alb-1972448257.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:020982261240:loadbalancer/app/app-alb/fee4a29d3e44e789",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0c86ef77f407adb6f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02acbcf0347640338"
              },
              {
                "subnet_id": "subnet-02c662ba977aa417a"
              }
            ],
            "subnets": [
              "subnet-02acbcf0347640338",
              "subnet-02c662ba977aa417a"
            ],
            "vpc_id": "vpc-0d23bab18be57e4f1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:020982261240:loadbalancer/app/app-alb/fee4a29d3e44e789"
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:020982261240:listener/app/app-alb/fee4a29d3e44e789/f0d1b373d2877e21",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:020982261240:targetgroup/app-tg/3db0600a3be21f36",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:020982261240:listener/app/app-alb/fee4a29d3e44e789/f0d1b373d2877e21",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:020982261240:loadbalancer/app/app-alb/fee4a29d3e44e789",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:020982261240:listener/app/app-alb/fee4a29d3e44e789/f0d1b373d2877e21"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:020982261240:targetgroup/app-tg/3db0600a3be21f36",
            "arn_suffix": "targetgroup/app-tg/3db0600a3be21f36",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:020982261240:targetgroup/app-tg/3db0600a3be21f36",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d23bab18be57e4f1"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:020982261240:targetgroup/app-tg/3db0600a3be21f36"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:020982261240:instance/i-0f2198f59e42eaac7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f2198f59e42eaac7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-078ceff27e66911e2"
              }
            ],
            "primary_network_interface_id": "eni-078ceff27e66911e2",
            "private_dns": "ip-10-0-10-37.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.37",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ab30af9d5e3c8b1f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6e5590dd54d4fc2",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05efd5d7b933117b9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "020982261240",
            "id": "i-0f2198f59e42eaac7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:020982261240:instance/i-09e9718078b575e3d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e9718078b575e3d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-086528ae266a1a1ea"
              }
            ],
            "primary_network_interface_id": "eni-086528ae266a1a1ea",
            "private_dns": "ip-10-0-20-223.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.223",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ae4f1bbe0bbde7e9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6aa1b4472be17c5",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05efd5d7b933117b9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "020982261240",
            "id": "i-09e9718078b575e3d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002a476a50694fbbb",
            "arn": "arn:aws:ec2:us-east-1:020982261240:elastic-ip/eipalloc-002a476a50694fbbb",
            "domain": "vpc",
            "id": "eipalloc-002a476a50694fbbb",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-173-227-224.compute-1.amazonaws.com",
            "public_ip": "54.173.227.224",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020982261240:internet-gateway/igw-0d9eee2d66e659237",
            "id": "igw-0d9eee2d66e659237",
            "owner_id": "020982261240",
            "region": "us-east-1",
            "vpc_id": "vpc-0d23bab18be57e4f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002a476a50694fbbb",
            "association_id": "eipassoc-0b0fe9e92b07286bc",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-058980ce4115d3585",
            "network_interface_id": "eni-05b78eb7300e73c68",
            "private_ip": "10.0.1.175",
            "public_ip": "54.173.227.224",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02acbcf0347640338",
            "vpc_id": "vpc-0d23bab18be57e4f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020982261240:route-table/rtb-073e93e961838afc9",
            "id": "rtb-073e93e961838afc9",
            "owner_id": "020982261240",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-058980ce4115d3585",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d23bab18be57e4f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "020982261240",
            "id": "rtb-073e93e961838afc9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020982261240:route-table/rtb-070c34d4c61f13077",
            "id": "rtb-070c34d4c61f13077",
            "owner_id": "020982261240",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9eee2d66e659237",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d23bab18be57e4f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "020982261240",
            "id": "rtb-070c34d4c61f13077",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02af8b509fc910cce",
            "region": "us-east-1",
            "route_table_id": "rtb-073e93e961838afc9",
            "subnet_id": "subnet-0d6e5590dd54d4fc2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00df044446910610b",
            "region": "us-east-1",
            "route_table_id": "rtb-073e93e961838afc9",
            "subnet_id": "subnet-0a6aa1b4472be17c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c659539349f1163b",
            "region": "us-east-1",
            "route_table_id": "rtb-070c34d4c61f13077",
            "subnet_id": "subnet-02acbcf0347640338"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074de1769b83da65a",
            "region": "us-east-1",
            "route_table_id": "rtb-070c34d4c61f13077",
            "subnet_id": "subnet-02c662ba977aa417a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020982261240:subnet/subnet-0d6e5590dd54d4fc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6e5590dd54d4fc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "020982261240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0d23bab18be57e4f1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "020982261240",
            "id": "subnet-0d6e5590dd54d4fc2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020982261240:subnet/subnet-0a6aa1b4472be17c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6aa1b4472be17c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "020982261240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0d23bab18be57e4f1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "020982261240",
            "id": "subnet-0a6aa1b4472be17c5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020982261240:subnet/subnet-02acbcf0347640338",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02acbcf0347640338",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "020982261240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0d23bab18be57e4f1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "020982261240",
            "id": "subnet-02acbcf0347640338",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020982261240:subnet/subnet-02c662ba977aa417a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c662ba977aa417a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "020982261240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0d23bab18be57e4f1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "020982261240",
            "id": "subnet-02c662ba977aa417a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020982261240:vpc/vpc-0d23bab18be57e4f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-002e9ce3f403d4b49",
            "default_route_table_id": "rtb-0b14b4a81c319d144",
            "default_security_group_id": "sg-0387f6f8ed27dd201",
            "dhcp_options_id": "dopt-04e2c7ece5dc40d22",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d23bab18be57e4f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b14b4a81c319d144",
            "owner_id": "020982261240",
            "region": "us-east-1",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "020982261240",
            "id": "vpc-0d23bab18be57e4f1",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020982261240:security-group/sg-0c86ef77f407adb6f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c86ef77f407adb6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "020982261240",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d23bab18be57e4f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "020982261240",
            "id": "sg-0c86ef77f407adb6f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:020982261240:security-group/sg-05efd5d7b933117b9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05efd5d7b933117b9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c86ef77f407adb6f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "020982261240",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d23bab18be57e4f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "020982261240",
            "id": "sg-05efd5d7b933117b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}